--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,10 +11,7 @@ map $host $host_upstream_mapped {
 }
 
 server {
-  listen 443 ssl;
-
-  ssl_certificate /root/.acme.sh/rpc.${DOMAIN_NAME}_ecc/fullchain.cer;
-  ssl_certificate_key /root/.acme.sh/rpc.${DOMAIN_NAME}_ecc/rpc.${DOMAIN_NAME}.key;
+  listen 80;
 
   server_name _;
 
