--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,13 @@
 map $host $host_upstream_mapped {
     hostnames;
 
-    rpc.${DOMAIN_NAME} rpc:8545;
-    blockscout.${DOMAIN_NAME} blockscout:4000;
+    testnet-rpc.${DOMAIN_NAME} rpc:8545;
+    testnet-blockscout.${DOMAIN_NAME} blockscout:4000;
     #explorer.${DOMAIN_NAME} blockscout-gateway:9000;
     #staking.${DOMAIN_NAME} staking-ui;
     #genesis-config.${DOMAIN_NAME} genesis-config:8080;
     #config.${DOMAIN_NAME} config-ui;
-    faucet.${DOMAIN_NAME} faucet:8080;
+    testnet-faucet.${DOMAIN_NAME} faucet:8080;
 }
 
 server {
