--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,10 @@ map $host $host_upstream_mapped {
 
     testnet-rpc.${DOMAIN_NAME} rpc:8545;
     testnet-blockscout.${DOMAIN_NAME} blockscout:4000;
-    #explorer.${DOMAIN_NAME} blockscout-gateway:9000;
-    #staking.${DOMAIN_NAME} staking-ui;
-    #genesis-config.${DOMAIN_NAME} genesis-config:8080;
-    #config.${DOMAIN_NAME} config-ui;
+    testnet-explorer.${DOMAIN_NAME} blockscout-gateway:9000;
+    testnet-staking.${DOMAIN_NAME} staking-ui;
+    testnet-genesis-config.${DOMAIN_NAME} genesis-config:8080;
+    testnet-config.${DOMAIN_NAME} config-ui;
     testnet-faucet.${DOMAIN_NAME} faucet:8080;
 }
 
